.labs/Local-Kubernetes/ml-pipeline/manifests/spark/service-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
spec:
  type: ClusterIP
  selector:
    app: spark
    role: master
  ports:
    - name: web
      port: 8080
      targetPort: 8080
    - name: spark
      port: 7077
      targetPort: 7077
