.labs/Local-Kubernetes/ml-pipeline/manifests/spark/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark
spec:
  ingressClassName: traefik
  rules:
    - host: spark.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-master
                port:
                  number: 8080
